test/modules/bradc/configParamNoUse.good
configParamNoUse.chpl:12: error: module 'M1' must be used before accessing its symbols
